[tool.poetry]
name = "stylegan"
version = "0.1.0"
description = ""
authors = ["VictorECarvalho <victorelitt@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.6"
tensorflow = "~1.10"
pillow = "~8.0"
requests = "^1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
